welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
var nbPas=0*
           ^Variables:8: error: value unary_! is not a member of Int
while(!dejaFait!=nbPas){
      ^